[tool.poetry]
name = "learn-pytorch"
version = "0.1.0"
description = ""
authors = ["Monkin <monkinsmurf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
